2011-01-14  John W. Eaton  <jwe@octave.org>

	* file-stat.cc (mode_as_string): Call strmode instead of mode_string.

	* filemode.h, filemode.c: Delete.
	* Makefile.am (INCS): Remove filemode.h from the list.
	(LIBOCTAVE_C_SOURCES): Remove filemode.c from the list.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* Update copyright notices for 2011.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* CColVector.cc, CMatrix.cc, CRowVector.cc, CSparse.cc,
	CmplxAEPBAL.cc, CmplxCHOL.cc, CmplxLU.cc, CmplxQR.cc,
	CmplxQRP.cc, EIG.cc, Quad.cc, dColVector.cc, dMatrix.cc,
	dRowVector.cc, dSparse.cc, dbleAEPBAL.cc, dbleCHOL.cc,
	dbleLU.cc, dbleQR.cc, dbleQRP.cc, eigs-base.cc, fCColVector.cc,
	fCMatrix.cc, fCNDArray.cc, fCRowVector.cc, fCmplxAEPBAL.cc,
	fCmplxCHOL.cc, fCmplxLU.cc, fCmplxQR.cc, fCmplxQRP.cc,
	fCmplxSVD.cc, fColVector.cc, fEIG.cc, fMatrix.cc, fNDArray.cc,
	fRowVector.cc, floatAEPBAL.cc, floatCHOL.cc, floatLU.cc,
	floatQR.cc, floatQRP.cc, lo-specfun.cc, oct-convn.cc:
	Style fixes.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc (get_blas_trans_arg): Return char, not char *.
	Change all uses.
	* dMatrix.cc (get_blas_trans_arg): Likewise.
	* fCMatrix.cc (get_blas_trans_arg): Likewise.
	* fMatrix.cc (get_blas_trans_arg): Likewise.
	Suggested by Pascal Dupuis  <Pascal.Dupuis@worldonline.be>.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* filemode.c: Use prototypes for function definitions.  Reorder
	functions to eliminate need for forward declarations.
	* filemode.h: New file.
	* file-stat.cc: Include filemode.h instead of using local extern
	declarations.
	* Makefile.am (INCS): Add filemode.h to the list.

	* lo-cutils.h: New file.
	(octave_qsort, octave_strcasecmp, octave_strncasecmp,
	octave_w32_library_search, octave_waitpid): Move decls here from
	lo-utils.h.
	* Makefile.am (INCS): Add lo-cutils.h to the list.
	* lo-utils.h: Include cutils.h.
	* lo-cutils.c: Include cutils.h.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* SparseCmplxQR.cc